AI Auth produciton tooltip, fixed migration exploit

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1176,7 +1176,7 @@
 	TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT_10:0 "$TRAIT_AIAUTH_RULER_PROGRAMS_EFFECT$\nActually the AI has a capacity for: §B10 programs§!"
 
 	sr_tec_ai_power:0 "AI Capacity"
-	sr_tec_ai_power_desc:0 "Data, programs, protocols... filtered by a sentient and sapient ai with the sole task of administration and ensuring the empire prosperity"
+	sr_tec_ai_power_desc:0 "§E§H$sr_tec_ai_power$§! (£sr_tec_ai_power£) represents the processing capacity required to support §H$tec_loc_ai_node$§! leaders and other misc uses. We can gain more by:\n§Y1.§! Building £building£ §H$building_tec_aiauth_1$§! on the surface of colonized planets.\n§Y2.§! §HAscension Paths§! may unlock additional ways of generating AI Capacity."
 
 	leader_trait_aiauth_ruler_checker_0:0 "AI Core"
 	leader_trait_aiauth_ruler_checker_0_desc:0 "$leader_trait_aiauth_ruler_programs_0_desc$"
