--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -352,12 +352,14 @@
 
 TEC_AI_RULER_NAME: "[event_target:tec_replaced_ruler.GetName]"
 
-tec_ai_power_balance_negative: "§R[tec_ai_power_balance_value]§!"
-tec_ai_power_balance_neutral: "§Y[tec_ai_power_balance_value]§!"
-tec_ai_power_balance_positive: "§G+[tec_ai_power_balance_value]§!"
+tec_ai_power_income_negative: "§R[tec_ai_power_income_value]§!"
+tec_ai_power_income_neutral: "§Y[tec_ai_power_income_value]§!"
+tec_ai_power_income_positive: "§G+[tec_ai_power_income_value]§!"
 
-tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_balance]"
-tec_cui_ai_power_effect: ""
+tec_cui_aiauth_ethic: "£icon_ethics£"
+tec_cui_aiauth_ethic_effect: "Re-Align the §Y[This.GetName]§! AI Node to another §YEthic§!"
+tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_income]"
+tec_cui_ai_power_effect: "§H$sr_tec_ai_power$§!\n$RESOURCES_STORED$§Y[FROM.tec_ai_power_stockpile]§!\n$RESOURCES_GAINED$[FROM.tec_ai_power_income]\n$PRODUCED$§G+[FROM.tec_ai_power_revenue]§!\n$CONSUMED$§R-[FROM.tec_ai_power_expenses]§!\n-----------\n$sr_tec_ai_power_desc$"
 
 tec_cui_aiuth_fragment_admiral: "£admiral£"
 tec_cui_aiuth_fragment_general: "£general£"
